# Relay

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  relay.sh
relay/: attachments.py  chat_history.py  cli.py  cloud_pool.py  config.py  conversation_history.py  feedback.py  local_providers.py  openai_api.py  orchestrator.py  policy.py  prompts.py  providers.py  redaction.py  schema.py  secrets_store.py  ui_config.py  usage.py  util.py  web_search.py  webui.py
relay/webui_assets/: app.js  docs.html  index.html  style.css
tests/: test_attachments.py  test_chat_history.py  test_cli.py  test_cloud_pool.py  test_conversation_history.py  test_features.py  test_local_providers.py  test_openai_api.py  test_orchestrator.py  test_policy.py  test_providers.py  test_secrets_store.py  test_ui_config.py  test_usage.py  test_webui.py
